# 3drenderer

./: .clang-format  .gitmodules  CMakeLists.txt  Makefile
include/: array.h  camera.h  clipping.h  display.h  light.h  matrix.h  mesh.h  swap.h  texture.h  triangle.h  vector.h
src/: array.c  camera.c  clipping.c  display.c  display.h  light.c  main.c  matrix.c  mesh.c  swap.c  texture.c  triangle.c  vector.c
